# Jetson_rp2040

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bin.c  main.c
configs/: rp2040_factory.ld
